--- a/mysite/app_blog/templates/articles_list.html
+++ b/mysite/app_blog/templates/articles_list.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     Публікації <br />
+    <a href="{%url 'home'%}">
+        Головна
+    </a>
     {% if category %} {{ category }} {% endif %}
     {% for item in items %}
     <div class="articles-row">
